examples/shop/ad/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ad
  labels:
    istio.io/rev: asm-managed
