examples/shop/ad/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: ad-virtualservice
    namespace: ad
spec:
    hosts:
    - ad.ad.svc.cluster.local
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: ad
          port:
            number: 80
